Adapt all notebooks except RL notebooks to mlpack 4.

--- a/avocado_price_prediction_with_linear_regression/avocado_price_prediction_with_lr_cpp.ipynb
+++ b/avocado_price_prediction_with_linear_regression/avocado_price_prediction_with_lr_cpp.ipynb
@@ -8,7 +8,7 @@
     "### Predicting Avocado's Average Price using Linear Regression\n",
     "\n",
     "### Objective\n",
-    "* Our target is to predict the future price of avocado's depending on various features (Type, Region, Total Bags, ...).\n",
+    "* Our target is to predict the future price of avocados depending on various features (Type, Region, Total Bags, ...).\n",
     "\n",
     "### Dataset\n",
     "Avocado Prices dataset has the following features:\n",
@@ -60,10 +60,7 @@
    "source": [
     "// Import necessary library headers.\n",
     "#include <mlpack/xeus-cling.hpp>\n",
-    "#include <mlpack/core.hpp>\n",
-    "#include <mlpack/core/data/split_data.hpp>\n",
-    "#include <mlpack/core/data/one_hot_encoding.hpp>\n",
-    "#include <mlpack/methods/linear_regression/linear_regression.hpp>"
+    "#include <mlpack.hpp>"
    ]
   },
   {
@@ -162,8 +159,9 @@
    "metadata": {},
    "source": [
     "### Loading the Data\n",
-    "Since features 9 (Avocado type) and 11 (region of observation) are strings (categorical), armadillo matrices can contain only numeric information so we have to explicitly define them as categorical in datasetInfo\n",
-    "this allows mlpack to map numeric values to each of those values, which can then be unmaped to strings."
+    "\n",
+    "Features 9 (Avocado type) and 11 (region of observation) are strings (categorical), but armadillo matrices can contain only numeric information; so, we have to explicitly define them as categorical in `datasetInfo`\n",
+    "this allows mlpack to map numeric values to each of those values, which can later be unmapped to strings."
    ]
   },
   {
@@ -176,9 +174,9 @@
     "// Load the dataset into armadillo matrix.\n",
     "\n",
     "arma::mat matrix;\n",
-    "mlpack::data::DatasetInfo info;\n",
-    "info.Type(9) = mlpack::data::Datatype::categorical;\n",
-    "info.Type(11) = mlpack::data::Datatype::categorical;\n",
+    "data::DatasetInfo info;\n",
+    "info.Type(9) = data::Datatype::categorical;\n",
+    "info.Type(11) = data::Datatype::categorical;\n",
     "data::Load(\"avocado_trim.csv\", matrix, info);"
    ]
   },
@@ -228,7 +226,7 @@
    "id": "ec24e405-4a4c-41ad-a560-2572d36c26f4",
    "metadata": {},
    "source": [
-    "* In the below visualization we are interested to see if there are any trends that occur with the prices of conventional avocados over a period of time."
+    "In the visualization below we are interested to see if there are any trends that occur with the prices of conventional avocados over a period of time."
    ]
   },
   {
@@ -240,12 +238,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e1b02586a0c44ffae8faaa5d6f58cad",
+       "model_id": "5d03b20dff2644e6a81dbb591a878ade",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 9e1b02586a0c44ffae8faaa5d6f58cad"
+       "A Jupyter widget with unique id: 5d03b20dff2644e6a81dbb591a878ade"
       ]
      },
      "execution_count": 12,
@@ -264,7 +262,7 @@
    "id": "48f79a7b-9a06-48c3-a131-b935eff4972d",
    "metadata": {},
    "source": [
-    "* In the below visualization we are interested to see if there are any trends that occur with the prices of organic avocados over a period of time."
+    "In the visualization below we are interested to see if there are any trends that occur with the prices of organic avocados over a period of time."
    ]
   },
   {
@@ -276,12 +274,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6b07f44240f4b628527c70e22e20f38",
+       "model_id": "840602cfedbe43b4a349c5579d22488c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: e6b07f44240f4b628527c70e22e20f38"
+       "A Jupyter widget with unique id: 840602cfedbe43b4a349c5579d22488c"
       ]
      },
      "execution_count": 13,
@@ -301,9 +299,9 @@
    "metadata": {},
    "source": [
     "### Observations\n",
-    "* Looks like every year avocado's are most expensive between August - November.\n",
+    "* Looks like every year avocados are most expensive between August - November.\n",
     "* There is a steep rise in the price in 2017.\n",
-    "* December - February seems to be the best months to purchase avocado's."
+    "* December - February seems to be the best months to purchase avocados."
    ]
   },
   {
@@ -315,12 +313,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "472e23fc77d64bc39da40317f82b5ee1",
+       "model_id": "67c4d770e36246bc825eb19d3e55317d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 472e23fc77d64bc39da40317f82b5ee1"
+       "A Jupyter widget with unique id: 67c4d770e36246bc825eb19d3e55317d"
       ]
      },
      "execution_count": 14,
@@ -343,12 +341,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13ebb07acf1444bf9703b3bebbc1f0b0",
+       "model_id": "3d6d7ad97fa9408fabb2fb7949beac47",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 13ebb07acf1444bf9703b3bebbc1f0b0"
+       "A Jupyter widget with unique id: 3d6d7ad97fa9408fabb2fb7949beac47"
       ]
      },
      "execution_count": 15,
@@ -388,12 +386,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "daaece61dfcd4758b0ae19386cf5c122",
+       "model_id": "212986d584f340ab924e445e10f3cf7b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: daaece61dfcd4758b0ae19386cf5c122"
+       "A Jupyter widget with unique id: 212986d584f340ab924e445e10f3cf7b"
       ]
      },
      "execution_count": 16,
@@ -469,7 +467,7 @@
    "source": [
     "### Train Test Split\n",
     "\n",
-    "The dataset has to be split into a training set and a test set. Here the dataset has 18249 observations and the testRatio is taken as 20% of the total observations. This indicates the test set should have 20% * 18249 = 3649 observations and training test should have 14600 observations respectively."
+    "The dataset has to be split into a training set and a test set. Here the dataset has 18249 observations and the `testRatio` is set to 20% of the total observations. This indicates the test set should have 20% * 18249 = 3649 observations and training test should have 14600 observations respectively."
    ]
   },
   {
@@ -512,7 +510,7 @@
     "\n",
     "The simple linear regression equation is represented as y = $a + b_{1}x_{1} + b_{2}x_{2} + b_{3}x_{3} + ... + b_{n}x_{n}$ where $x_{i}$ is the ith explanatory variable, y is the dependent variable, $b_{i}$ is ith coefficient and a is the intercept.\n",
     "\n",
-    "To perform linear regression we'll be using `LinearRegression()` api from mlpack."
+    "To perform linear regression we'll be using the `LinearRegression` class from mlpack."
    ]
   },
   {
@@ -520,11 +518,19 @@
    "execution_count": 22,
    "id": "97fdc354-57d0-4e28-91e8-1d707fc24226",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "warning: solve(): system seems singular (rcond: 1.18469e-18); attempting approx solution\n"
+     ]
+    }
+   ],
    "source": [
-    "// Create and Train Linear Regression model.\n",
-    "\n",
-    "regression::LinearRegression lr(Xtrain, yTrain, 0.5);"
+    "// Create and train Linear Regression model.\n",
+    "LinearRegression lr(Xtrain, yTrain, 0.5);"
    ]
   },
   {
@@ -620,12 +626,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa0991a1b1934d6a943d4fc87d51b3b2",
+       "model_id": "dad48946b8a34c9b8226bfd9ce43d7b0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: fa0991a1b1934d6a943d4fc87d51b3b2"
+       "A Jupyter widget with unique id: dad48946b8a34c9b8226bfd9ce43d7b0"
       ]
      },
      "execution_count": 29,
@@ -648,12 +654,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d1463d5ae5d04d7e8cd17f36e9da488d",
+       "model_id": "a283f167b69e407295c247d1650b3417",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: d1463d5ae5d04d7e8cd17f36e9da488d"
+       "A Jupyter widget with unique id: a283f167b69e407295c247d1650b3417"
       ]
      },
      "execution_count": 30,
@@ -674,7 +680,7 @@
    "source": [
     "## Evaluation Metrics for Regression model\n",
     "\n",
-    "In the Previous cell we have visualized our model performance by plotting the best fit line. Now we will use various evaluation metrics to understand how well our model has performed.\n",
+    "In the previous cell we have visualized our model performance by plotting the best fit line. Now we will use various evaluation metrics to understand how well our model has performed.\n",
     "\n",
     "* Mean Absolute Error (MAE) is the sum of absolute differences between actual and predicted values, without considering the direction.\n",
     "$$ MAE = \\frac{\\sum_{i=1}^n\\lvert y_{i} - \\hat{y_{i}}\\rvert} {n} $$\n",
@@ -694,9 +700,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Absolute Error: 0.204204\n",
-      "Mean Squared Error: 0.0744995\n",
-      "Root Mean Squared Error: 0.272946\n"
+      "Mean Absolute Error: 0.202295\n",
+      "Mean Squared Error: 0.0731923\n",
+      "Root Mean Squared Error: 0.270541\n"
      ]
     }
    ],
