--- a/california_housing_price_prediction_with_linear_regression/california_housing_price_prediction_with_lr_cpp.ipynb
+++ b/california_housing_price_prediction_with_linear_regression/california_housing_price_prediction_with_lr_cpp.ipynb
@@ -14,7 +14,7 @@
     "### About the Data\n",
     " This dataset is a modified version of the California Housing dataset available from Luís Torgo's page (University of Porto). Luís Torgo obtained it from the StatLib repository (which is closed now). The dataset may also be downloaded from StatLib mirrors.\n",
     " \n",
-    " This dataset is also used in a book HandsOn-ML (a very good book and highly recommended)[ https://www.oreilly.com/library/view/hands-on-machine-learning/9781491962282/].\n",
+    " This dataset is also used in a book HandsOn-ML (a very good book and highly recommended: https://www.oreilly.com/library/view/hands-on-machine-learning/9781491962282/]).\n",
     " \n",
     " The dataset in this directory is almost identical to the original, with two differences:\n",
     "207 values were randomly removed from the totalbedrooms column, so we can discuss what to do with missing data. An additional categorical attribute called oceanproximity was added, indicating (very roughly) whether each block group is near the ocean, near the Bay area, inland or on an island. This allows discussing what to do with categorical data.\n",
@@ -52,12 +52,15 @@
     "\n",
     "Suppose you work in a Real State Agency as an analyst or Data Scientist and your Boss wants you to predict the housing prices in a certain location. You are provided with a dataset. So, what will be the first thing to do?\n",
     "\n",
-    "If you are probably jumping right into anaylsing the data and ML Algos, then this is a wrong a step. Its a big \"NO\". \n",
-    " <h5> The first thing is to ask Questions. </h5>\n",
+    "If you are probably jumping right into analysing the data and ML algorithms, then this is not the right way to go.\n",
+    "<h5>The first thing is to Ask Questions.</h5>\n",
     " \n",
-    " Questions like :  What will be the predictions used for? Will it be fed into some other system or not? And Many More, just to have concrete goals.\n",
+    "Questions like:\n",
+    "  * What will be the predictions used for?\n",
+    "  * Will it be fed into some other system or not?\n",
+    "and many more, just to have concrete goals.\n",
     " \n",
-    " So, your boss says that they will be using the data to get the predcitions so that the other team can work on some investment strategies.\n",
+    "In this case, your boss says that they will be using the data to get the predictions so that the other team can work on some investment strategies.\n",
     " \n",
     "So, let's get started."
    ]
@@ -78,9 +81,7 @@
    "outputs": [],
    "source": [
     "#include <mlpack/xeus-cling.hpp>\n",
-    "#include <mlpack/core.hpp>\n",
-    "#include <mlpack/methods/linear_regression/linear_regression.hpp>\n",
-    "#include <mlpack/core/data/split_data.hpp>"
+    "#include <mlpack.hpp>"
    ]
   },
   {
@@ -140,7 +141,7 @@
    "metadata": {},
    "source": [
     "### Loading the Data\n",
-    "Now, we need to load the dataset as armadillo matrix for further operations. Our dataset has a total of 9 features: 8 numerical and 1 categorical(ocean proximity). We need to map the categorical feature as armadillo operates on numeric values."
+    "Now, we need to load the dataset as an Armadillo matrix for further operations. Our dataset has a total of 9 features: 8 numerical and 1 categorical(ocean proximity). We need to map the categorical features, as armadillo operates on numeric values only."
    ]
   },
   {
@@ -148,26 +149,15 @@
    "id": "08e417d5",
    "metadata": {},
    "source": [
-    "But, there's one thing which we need to do before loading the dataset as armadillo matrix, that is, to deal with any missing values. Since 207 values were removed from the original dataset from \"total_bedrooms_column\", we need to fill them using either \"mean\" or \"median\" of that feature( for numerical) and \"mode\"( for categorical\")."
+    "But, there's one thing which we need to do before loading the dataset as an Armadillo matrix; that is, we need to deal with any missing values. Since 207 values were removed from the original dataset from \"total_bedrooms_column\", we need to fill them using either \"mean\" or \"median\" of that feature (for numerical) and \"mode\" (for categorical)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "id": "7e4a6750",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "// The imputing functions follows this:\n",
     "// Impute(inputFile, outputFile, kind);\n",
@@ -187,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "id": "4d95bf63",
    "metadata": {},
    "outputs": [],
@@ -200,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "id": "d2e2c3f4",
    "metadata": {},
    "outputs": [],
@@ -213,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "id": "choice-victor",
    "metadata": {},
    "outputs": [
@@ -253,12 +243,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "id": "d6969aa9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#include<mlpack/core/data/one_hot_encoding.hpp>\n",
     "arma::mat encoded_dataset; \n",
     "data::OneHotEncoding(dataset, encoded_dataset, info);"
    ]
@@ -273,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "id": "8bad850e",
    "metadata": {},
    "outputs": [
@@ -283,7 +272,7 @@
        "14"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,22 +308,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "a7b59588",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5c0dd57a133c4ecca91802380f610915",
+       "model_id": "a5f1f1effcb642b195677db04a6f597c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 5c0dd57a133c4ecca91802380f610915"
+       "A Jupyter widget with unique id: a5f1f1effcb642b195677db04a6f597c"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,22 +345,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "54c2a0ca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f938371980f045b4b47b190bdc1dd973",
+       "model_id": "ba73ba78ad5c4052b9a811fd9e08db7c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: f938371980f045b4b47b190bdc1dd973"
+       "A Jupyter widget with unique id: ba73ba78ad5c4052b9a811fd9e08db7c"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,22 +382,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "3fef937e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8177cbf69b104cfeb24cbea0475693ae",
+       "model_id": "2192215b3cbc4752a0160f4594594e01",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 8177cbf69b104cfeb24cbea0475693ae"
+       "A Jupyter widget with unique id: 2192215b3cbc4752a0160f4594594e01"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,22 +419,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "5d22bf50",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "10408985977f4b25b0332df8a43f7081",
+       "model_id": "38cffa6bcbdd41fa9b20b1f8ef9b2a21",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 10408985977f4b25b0332df8a43f7081"
+       "A Jupyter widget with unique id: 38cffa6bcbdd41fa9b20b1f8ef9b2a21"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,22 +456,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "9c60a67f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98d1a64dbd0947d78f0f8e276debab93",
+       "model_id": "e9f1b75bb18e41a8876ff8fe24437a63",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 98d1a64dbd0947d78f0f8e276debab93"
+       "A Jupyter widget with unique id: e9f1b75bb18e41a8876ff8fe24437a63"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,12 +489,12 @@
    "metadata": {},
    "source": [
     "<h3>Train-Test Split</h3>\n",
-    "The dataset needs to be splitted into training and testing set for tarining."
+    "The dataset needs to be split into a training and testing set before we learn any model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "chubby-water",
    "metadata": {},
    "outputs": [],
@@ -518,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "vital-lebanon",
    "metadata": {},
    "outputs": [],
@@ -529,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "ruled-refrigerator",
    "metadata": {},
    "outputs": [],
@@ -550,24 +539,23 @@
     "\n",
     "The simple linear regression equation is represented as y = $a + b_{1}x_{1} + b_{2}x_{2} + b_{3}x_{3} + ... + b_{n}x_{n}$ where $x_{i}$ is the ith explanatory variable, y is the dependent variable, $b_{i}$ is ith coefficient and a is the intercept.\n",
     "\n",
-    "To perform linear regression we'll be using `LinearRegression()` api from mlpack."
+    "To perform linear regression we'll be using the `LinearRegression` class from mlpack."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "id": "chemical-inside",
    "metadata": {},
    "outputs": [],
    "source": [
-    "using namespace mlpack::regression;\n",
     "LinearRegression lr(trainSet, trainLabels, 0.5);\n",
-    "// The above line creates and train the model."
+    "// The line above creates and train the model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "id": "sensitive-sociology",
    "metadata": {},
    "outputs": [],
@@ -579,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "id": "empty-senator",
    "metadata": {},
    "outputs": [],
@@ -589,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "id": "circular-donna",
    "metadata": {},
    "outputs": [
@@ -597,12 +585,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.74874e+09"
+      "4.70395e+09"
      ]
     }
    ],
    "source": [
-    "std::cout<<lr.ComputeError(trainSet, trainLabels);"
+    "std::cout << lr.ComputeError(trainSet, trainLabels);"
    ]
   },
   {
@@ -615,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "id": "laden-drawing",
    "metadata": {},
    "outputs": [
@@ -623,8 +611,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "174300\n",
-      "190507\n"
+      "158000\n",
+      "257831\n"
      ]
     }
    ],
@@ -635,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "id": "72d31768",
    "metadata": {},
    "outputs": [
@@ -643,8 +631,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "170500\n",
-      "203024\n"
+      "127400\n",
+      "218479\n"
      ]
     }
    ],
@@ -655,24 +643,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "id": "19111678",
    "metadata": {},
    "outputs": [],
    "source": [
     "arma::mat preds;\n",
     "preds.insert_rows(0, testLabels);\n",
-    "preds.insert_rows(1, output);"
+    "preds.insert_rows(1, output);\n",
+    "\n",
+    "arma::mat diffs = preds.row(1) - preds.row(0);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "id": "dc8e7e0e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mlpack::data::Save(\"preds.csv\", preds);"
+    "data::Save(\"./preds.csv\", preds);\n",
+    "data::Save(\"./predsDiff.csv\", diffs);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "8ac339e3-dd31-4d35-b406-1e9722335740",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!sed -i '1iY_Test,Y_Preds' ./preds.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d4019e4f-ecde-4926-bf6b-3d796d74bf38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!sed -i '1iY_Diff' ./predsDiff.csv"
    ]
   },
   {
@@ -681,62 +692,62 @@
    "metadata": {},
    "source": [
     "### Model Evaluation\n",
-    "Test data is visualized with `testLables` and `output`, the blue points indicates the data points and the blue line indicates the regression line or best fit line."
+    "Test data is visualized with `testLabels` and `output`, the blue points indicates the data points and the blue line indicates the regression line or best fit line."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "id": "efc02267",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e350347bea84528bfc8ad34775eff1b",
+       "model_id": "3d016d5b244f4da0a8ffd92e7aafeeae",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 2e350347bea84528bfc8ad34775eff1b"
+       "A Jupyter widget with unique id: 3d016d5b244f4da0a8ffd92e7aafeeae"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lmplot(\"predis.csv\", \"predsScatter\");\n",
-    "auto img = xw::image_from_file(\"predsScatter.png\").finalize();    \n",
+    "LmPlot(\"./preds.csv\", \"Y_Test\", \"Y_Preds\", \"predsScatter\");\n",
+    "auto img = xw::image_from_file(\"plots/predsScatter.png\").finalize();    \n",
     "img"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 30,
    "id": "95159c44",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "739a2b0617ff402ab08664e833fb9339",
+       "model_id": "9bf4813e8c894e6cb4de110544bf7b50",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 739a2b0617ff402ab08664e833fb9339"
+       "A Jupyter widget with unique id: 9bf4813e8c894e6cb4de110544bf7b50"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "histplot(\"predictions.csv\", \"Distribution of residuals\");\n",
-    "auto img = xw::image_from_file(\"Distribution of residuals.png\").finalize();\n",
+    "HistPlot(\"./predsDiff.csv\", \"Y_Diff\", \"Distribution of residuals\");\n",
+    "auto img = xw::image_from_file(\"plots/Distribution of residuals.png\").finalize();\n",
     "img"
    ]
   },
@@ -747,7 +758,7 @@
    "source": [
     "## Evaluation Metrics for Regression model\n",
     "\n",
-    "In the Previous cell we have visualized our model performance by plotting the best fit line. Now we will use various evaluation metrics to understand how well our model has performed.\n",
+    "In the previous cell we have visualized our model performance by plotting the best fit line. Now we will use various evaluation metrics to understand how well our model has performed.\n",
     "\n",
     "* Mean Absolute Error (MAE) is the sum of absolute differences between actual and predicted values, without considering the direction.\n",
     "$$ MAE = \\frac{\\sum_{i=1}^n\\lvert y_{i} - \\hat{y_{i}}\\rvert} {n} $$\n",
@@ -759,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
    "id": "b9b5cf2e",
    "metadata": {},
    "outputs": [
@@ -767,9 +778,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Absolute Error: 49434.7\n",
-      "Mean Squared Error: 4.78e+09\n",
-      "Root Mean Squared Error: 69137.5\n"
+      "Mean Absolute Error: 50816.8\n",
+      "Mean Squared Error: 4.94139e+09\n",
+      "Root Mean Squared Error: 70295\n"
      ]
     }
    ],
@@ -786,11 +797,12 @@
    "id": "5c23ff83",
    "metadata": {},
    "source": [
-    "We can clearly see that the MAE is 49674, when compared with the median house value doesn't seems to be a good fit. \n",
+    "We can clearly see that the MAE is 49674; when we compare this with the median house value, it doesn't seem to be a very good fit. \n",
     "\n",
     "Thus we can conclude that, the simple Linear Regression models is not being able to catch all the features.\n",
-    "So, maybe its time for you to try other algorithms. \n",
-    "<h5>NOTE : </h5> In the entire ML workflow, you never know exactly which model will perfrom the best. So, usually you try a lot of different algorithms to see which fits the model."
+    "So, maybe it's time to try other algorithms. \n",
+    "\n",
+    "<h5>NOTE:</h5> In the entire ML workflow, you never know exactly which model will perform the best. So, usually you try a lot of different algorithms to see which fits the model."
    ]
   }
  ],
