--- a/cifar10_cnn/cifar10_eval.ipynb
+++ b/cifar10_cnn/cifar10_eval.ipynb
@@ -15,33 +15,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e8a6c7b4-45ed-4430-90bd-b98297ff8c3a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python ../tools/download_data_set.py --dataset_name cifar10"
+    "!wget -q https://datasets.mlpack.org/cifar-10_test-1k.csv.gz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "id": "8239f0ea-51b9-4ac8-b1ea-4adb53103f4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gzip: cifar-10_test-1k.csv already exists;\tnot overwritten\n"
+     ]
+    }
+   ],
+   "source": [
+    "!gunzip -d cifar-10_test-1k.csv.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "caba3ae8-001f-4ec9-883c-d4190f2ee8b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget -q https://datasets.mlpack.org/cifarNet.xml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "c97a7239-e746-4614-959d-effa281a3d58",
    "metadata": {},
    "outputs": [],
    "source": [
     "// Import necessary library headers.\n",
     "#include <mlpack/xeus-cling.hpp>\n",
-    "#include <mlpack/core.hpp>\n",
-    "#include <mlpack/core/data/split_data.hpp>\n",
-    "#include <mlpack/methods/ann/layer/layer.hpp>\n",
-    "#include <mlpack/methods/ann/ffn.hpp>\n",
-    "#include <ensmallen.hpp>"
+    "#define MLPACK_ENABLE_ANN_SERIALIZATION\n",
+    "#include <mlpack.hpp>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "07be2b79-ea94-4bc8-8dbc-db16399d7823",
    "metadata": {},
    "outputs": [],
@@ -51,17 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "3746f908-3cff-4803-9795-aa96e59d69c5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using namespace mlpack::ann;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "f32adecb-6d46-4e21-8429-f1e42b54f7d6",
    "metadata": {},
    "outputs": [],
@@ -71,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "95a0d96b-0727-4665-9098-5a403728724a",
    "metadata": {},
    "outputs": [],
@@ -81,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "3f3a7912-31ec-478a-9b5a-41f58812874e",
    "metadata": {},
    "outputs": [],
@@ -132,27 +147,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "d92c9f56-8b09-46ef-9828-f60f4b7d1ce6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Create the Feed Forward Neural Network with Random weight on which our,\n",
-    "// pretrained model weight will be loaded\n",
-    "FFN<NegativeLogLikelihood<>, RandomInitialization> model;\n",
+    "// Create the Feed Forward Neural Network object, into which our\n",
+    "// pretrained model will be loaded.\n",
+    "//\n",
+    "// It's not necessary to specify the model architecture, since that is\n",
+    "// saved along with the model.  Nonetheless, for edification, we include\n",
+    "// the architecture below (commented out).\n",
+    "FFN<NegativeLogLikelihood, RandomInitialization> model;\n",
     "\n",
-    "model.Add<Convolution<>>(3, 6, 5, 5, 1, 1, 0, 0, 32, 32); \n",
-    "model.Add<LeakyReLU<>>(); \n",
-    "model.Add<MaxPooling<>>(2, 2, 2, 2, true);\n",
-    "model.Add<Convolution<>>(6, 16, 5, 5, 1, 1, 0, 0, 14, 14);\n",
-    "model.Add<LeakyReLU<>>();\n",
-    "model.Add<MaxPooling<>>(2, 2, 2, 2, true);\n",
-    "model.Add<Linear<>>(5*5*16, 120);\n",
-    "model.Add<LeakyReLU<>>();\n",
-    "model.Add<Linear<>>(120, 84);\n",
-    "model.Add<LeakyReLU<>>();\n",
-    "model.Add<Linear<>>(84, 10);\n",
-    "model.Add<LogSoftMax<>>();"
+    "// model.Add<Convolution>(6, 5, 5, 1, 1, 0, 0); \n",
+    "// model.Add<LeakyReLU>(); \n",
+    "// model.Add<MaxPooling>(2, 2, 2, 2, true);\n",
+    "// model.Add<Convolution>(16, 5, 5, 1, 1, 0, 0);\n",
+    "// model.Add<LeakyReLU>();\n",
+    "// model.Add<MaxPooling>(2, 2, 2, 2, true);\n",
+    "// model.Add<Linear>(120);\n",
+    "// model.Add<LeakyReLU>();\n",
+    "// model.Add<Linear>(84);\n",
+    "// model.Add<LeakyReLU>();\n",
+    "// model.Add<Linear>(10);\n",
+    "// model.Add<LogSoftMax>();"
    ]
   },
   {
@@ -165,25 +184,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "f2ec67c1-a8a1-40ce-b884-25d97a071d69",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[0;33m[WARN ] \u001b[0munrecognized XML syntax\n"
+      "\u001b[0;31m[FATAL] \u001b[0mXML Parsing failed - provided NVP (outputLayer) not found\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "Standard Exception",
+     "evalue": "fatal error; see Log::Fatal output",
+     "output_type": "error",
+     "traceback": [
+      "Standard Exception: fatal error; see Log::Fatal output"
      ]
     }
    ],
    "source": [
-    "mlpack::data::Load(\"model.xml\", \"model\", model);"
+    "mlpack::data::Load(\"cifarNet.xml\", \"model\", model, true);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "b37b63e4-561a-4528-8db9-786336ff91cb",
    "metadata": {},
    "outputs": [],
@@ -191,7 +219,7 @@
     "// Matrix for storing test feeature & labels.\n",
     "mat testData, testY;\n",
     "// Load the test data.\n",
-    "mlpack::data::Load(\"../data/cifar-10_test.csv\", testData, true);\n",
+    "mlpack::data::Load(\"./cifar-10_test-1k.csv\", testData, true);\n",
     "// Drop the header column.\n",
     "testData.shed_col(0);\n",
     "// Remove labels before predicting.\n",
@@ -200,19 +228,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ca47e69f-68ef-4d31-b6c2-44a03b8efbbd",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "<h4><font color='red'>Note: Model inference does not work properly in the notebook, the below cell executes forever.</font></h4>\n",
-    "<h4><font color='red'>As for now this notebook is only for visualization & explanation. Please use the <em>eval.cpp</em> for model inference.</font></h4>"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "0b23865a-f8c4-4d91-b0d6-e883fe48dd50",
    "metadata": {},
    "outputs": [
@@ -221,6 +238,14 @@
      "output_type": "stream",
      "text": [
       "Starting Prediction on testset ...\n"
+     ]
+    },
+    {
+     "ename": "Standard Exception",
+     "evalue": "FFN::Predict(): cannot use network with no layers!",
+     "output_type": "error",
+     "traceback": [
+      "Standard Exception: FFN::Predict(): cannot use network with no layers!"
      ]
     }
    ],
@@ -235,10 +260,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5215dfb9-e047-4b8c-ad62-f79ff77b726c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy on testset = 0%\n"
+     ]
+    }
+   ],
    "source": [
     "cout << \"Accuracy on testset = \" << testAccuracy << \"%\" << endl;"
    ]
