--- a/graduate_admission_classification_with_Adaboost/graduate-admission-classification-with-adaboost-cpp.ipynb
+++ b/graduate_admission_classification_with_Adaboost/graduate-admission-classification-with-adaboost-cpp.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8a06d8f1-23a7-44ef-80b1-0394a660e8d0",
    "metadata": {},
    "outputs": [],
@@ -41,22 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d9826954-4773-44d2-ac20-456ed54724d2",
    "metadata": {},
    "outputs": [],
    "source": [
     "// Import necessary library headers.\n",
     "#include <mlpack/xeus-cling.hpp>\n",
-    "#include <mlpack/core.hpp>\n",
-    "#include <mlpack/core/data/split_data.hpp>\n",
-    "#include <mlpack/methods/decision_tree/decision_tree.hpp>\n",
-    "#include <mlpack/methods/adaboost/adaboost.hpp>"
+    "#include <mlpack.hpp>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0cd85eef-ee6d-49ff-bc71-66b9b629b9a3",
    "metadata": {},
    "outputs": [],
@@ -71,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "10044eb8-a409-43df-bfec-6be549cfc877",
    "metadata": {},
    "outputs": [],
@@ -81,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b6027532-5e6a-403c-a961-18bf74a3853b",
    "metadata": {},
    "outputs": [],
@@ -91,33 +88,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "ed677478-0314-4f8d-9097-39ad9786de4d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using namespace mlpack::tree;"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
-   "id": "2b7f0fd4-f3b7-4f73-bec8-157108dab0e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using namespace mlpack::adaboost;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "id": "46d52743-e55e-4f9a-9aa3-9b4dad9924c7",
    "metadata": {},
    "outputs": [],
    "source": [
     "// Utility functions for evaluation metrics.\n",
-    "double Accuracy(const arma::Row<size_t>& yPreds, const arma::Row<size_t>& yTrue)\n",
+    "double ComputeAccuracy(const arma::Row<size_t>& yPreds, const arma::Row<size_t>& yTrue)\n",
     "{\n",
     "    const size_t correct = arma::accu(yPreds == yTrue);\n",
     "    return (double)correct / (double)yTrue.n_elem;\n",
@@ -126,12 +103,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "659a4713-c49e-454a-828a-81722ba2029a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "double Precision(const size_t truePos, const size_t falsePos)\n",
+    "double ComputePrecision(const size_t truePos, const size_t falsePos)\n",
     "{\n",
     "    return (double)truePos / (double)(truePos + falsePos);\n",
     "}"
@@ -139,12 +116,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "2affa594-e479-449a-a801-f96e69780b84",
    "metadata": {},
    "outputs": [],
    "source": [
-    "double Recall(const size_t truePos, const size_t falseNeg)\n",
+    "double ComputeRecall(const size_t truePos, const size_t falseNeg)\n",
     "{\n",
     "    return (double)truePos / (double)(truePos + falseNeg);\n",
     "}"
@@ -152,22 +129,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "cbb76f93-fd3f-44ea-a81b-09cd53fc8c64",
    "metadata": {},
    "outputs": [],
    "source": [
-    "double F1Score(const size_t truePos, const size_t falsePos, const size_t falseNeg)\n",
+    "double ComputeF1Score(const size_t truePos, const size_t falsePos, const size_t falseNeg)\n",
     "{\n",
-    "    double prec = Precision(truePos, falsePos);\n",
-    "    double rec = Precision(truePos, falseNeg);\n",
+    "    double prec = ComputePrecision(truePos, falsePos);\n",
+    "    double rec = ComputePrecision(truePos, falseNeg);\n",
     "    return 2 * (prec * rec) / (prec + rec);\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "7aee5d70-3c61-4f64-89ef-449efa2a2822",
    "metadata": {},
    "outputs": [],
@@ -187,9 +164,9 @@
     "        size_t falseNeg = arma::accu(yPreds != val && yPreds != yTrue);\n",
     "        \n",
     "        std::cout << std::setw(15) << val\n",
-    "                  << std::setw(12) << std::setprecision(2) << Precision(truePos, falsePos) \n",
-    "                  << std::setw(16) << std::setprecision(2) << Recall(truePos, falseNeg) \n",
-    "                  << std::setw(14) << std::setprecision(2) << F1Score(truePos, falsePos, falseNeg)\n",
+    "                  << std::setw(12) << std::setprecision(2) << ComputePrecision(truePos, falsePos) \n",
+    "                  << std::setw(16) << std::setprecision(2) << ComputeRecall(truePos, falseNeg) \n",
+    "                  << std::setw(14) << std::setprecision(2) << ComputeF1Score(truePos, falsePos, falseNeg)\n",
     "                  << std::setw(16) << truePos\n",
     "                  << std::endl;\n",
     "    }\n",
@@ -198,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "49acc160-0a32-4104-bc18-3205f444e99b",
    "metadata": {},
    "outputs": [],
@@ -208,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "14eecfdc-2201-4466-8211-d4a0e453ee50",
    "metadata": {},
    "outputs": [],
@@ -220,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "21e165d0-ead0-4cf8-b89e-d9e3154dbd67",
    "metadata": {},
    "outputs": [
@@ -253,22 +230,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "2949d267-2d60-4781-8027-95202d439d45",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a3b84344b52425dbbf72457df173dd7",
+       "model_id": "e0c840c7bae043a1a07bfc6224ec6c07",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 7a3b84344b52425dbbf72457df173dd7"
+       "A Jupyter widget with unique id: e0c840c7bae043a1a07bfc6224ec6c07"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,22 +283,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "26c2ce54-7cef-42bb-be16-2b9ca4400c4c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7cdae965701e48e29924d6dd755a7ed3",
+       "model_id": "506f046f4be54662827b8f3325251ae0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 7cdae965701e48e29924d6dd755a7ed3"
+       "A Jupyter widget with unique id: 506f046f4be54662827b8f3325251ae0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,22 +320,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "acdb904f-1ff3-4453-8f68-887d51a6da12",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e04bac86ce334df5978cc977b2a97c00",
+       "model_id": "1c489f9140e946b089b91adbcbdac843",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: e04bac86ce334df5978cc977b2a97c00"
+       "A Jupyter widget with unique id: 1c489f9140e946b089b91adbcbdac843"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,22 +357,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "b2de57fe-a8b9-4c22-a65a-ab3a2a935442",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3cca3b61203e4d269dc4b9542dd3faf6",
+       "model_id": "6d5ef36bff3c45eb8275e8cd7fa627ec",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 3cca3b61203e4d269dc4b9542dd3faf6"
+       "A Jupyter widget with unique id: 6d5ef36bff3c45eb8275e8cd7fa627ec"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,22 +394,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "037fd8fb-5907-40b8-a3d3-f8457d48d8ca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49b6dabe2b114ead906f19ae4f7fc0e7",
+       "model_id": "32e45629ec564c5395deb27134ba6997",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 49b6dabe2b114ead906f19ae4f7fc0e7"
+       "A Jupyter widget with unique id: 32e45629ec564c5395deb27134ba6997"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,22 +431,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "e11b751d-7da4-44a5-87b6-7fa48074a424",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fac5344c79cc42488acc6da83830fac3",
+       "model_id": "57172550247f489aa52ccd3ee6339ade",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: fac5344c79cc42488acc6da83830fac3"
+       "A Jupyter widget with unique id: 57172550247f489aa52ccd3ee6339ade"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,22 +469,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "840ed16b-cd25-4201-996e-5568f711e70a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8e19c8903d949e9a4e6a4c487a1feaf",
+       "model_id": "f75c2cc4729d4a639df6286e0d4410a8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: c8e19c8903d949e9a4e6a4c487a1feaf"
+       "A Jupyter widget with unique id: f75c2cc4729d4a639df6286e0d4410a8"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,22 +507,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "661329dd-8889-4c00-9a50-f505b3074a86",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "800bbfd5f06d4c2f85d770044906375b",
+       "model_id": "0bd63a98115245959176429cb89514dd",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 800bbfd5f06d4c2f85d770044906375b"
+       "A Jupyter widget with unique id: 0bd63a98115245959176429cb89514dd"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,22 +544,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "7ab95e19-283a-408f-b15c-220870488cf9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9372f926615149a28b9a82ee5d0ba548",
+       "model_id": "426f2e618cc24a13bfecb18b2ee53e79",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 9372f926615149a28b9a82ee5d0ba548"
+       "A Jupyter widget with unique id: 426f2e618cc24a13bfecb18b2ee53e79"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,26 +588,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "03cea630-60f5-4580-ae47-97c71fd46974",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8983f92468ac43d4b74c4fb5ada6059e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter widget with unique id: 8983f92468ac43d4b74c4fb5ada6059e"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "LmPlot(\"Admission_Predict.csv\", \"GRE Score\", \"Chance of Admit\", \"GRE Score vs Chance of Admit\");\n",
     "auto img = xw::image_from_file(\"./plots/GRE Score vs Chance of Admit.png\").finalize();\n",
@@ -648,26 +609,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "3be32f37-fff1-4f52-a5f4-8bb6e8315e82",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf315c876b1b4df3b731a621aabaef2a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter widget with unique id: cf315c876b1b4df3b731a621aabaef2a"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "LmPlot(\"Admission_Predict.csv\", \"TOEFL Score\", \"Chance of Admit\", \"TOEFL Score vs Chance of Admit\");\n",
     "auto img = xw::image_from_file(\"./plots/TOEFL Score vs Chance of Admit.png\").finalize();\n",
@@ -684,26 +629,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "35627049-6de1-4745-a409-9c64d4c319bd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8427083b203b42f186793069e94881b8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter widget with unique id: 8427083b203b42f186793069e94881b8"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "LinePlot(\"Admission_Predict.csv\", \"University Rating\", \"Chance of Admit\", \"Rating vs Admission\");\n",
     "auto img = xw::image_from_file(\"./plots/Rating vs Admission.png\").finalize();\n",
@@ -720,26 +649,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "27eb75cc-10d6-41ac-95da-21d217d8f192",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34b772e217484d209ea27d4f2902c657",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter widget with unique id: 34b772e217484d209ea27d4f2902c657"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "LmPlot(\"Admission_Predict.csv\", \"SOP\", \"Chance of Admit\", \"SOP vs Chance of Admit\");\n",
     "auto img = xw::image_from_file(\"./plots/SOP vs Chance of Admit.png\").finalize();\n",
@@ -756,26 +669,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f644e4b1-7d49-424c-8e19-429fc7322136",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1277cf27615b47c7b7549c53e005e3be",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter widget with unique id: 1277cf27615b47c7b7549c53e005e3be"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "LmPlot(\"Admission_Predict.csv\", \"LOR\", \"Chance of Admit\", \"LOR vs Chance of Admit\");\n",
     "auto img = xw::image_from_file(\"./plots/LOR vs Chance of Admit.png\").finalize();\n",
@@ -792,26 +689,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "7003d1ad-dcbf-47d8-8ec7-6cf7f049227f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "856a7db761424de29ea4ea610c6e0c7b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter widget with unique id: 856a7db761424de29ea4ea610c6e0c7b"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ScatterPlot(\"Admission_Predict.csv\", \"CGPA\", \"Chance of Admit\", \"\", \"\", \"\", \"\", \"\", \"\", \"CGPA vs Chance of Admit\");\n",
     "auto img = xw::image_from_file(\"./plots/CGPA vs Chance of Admit.png\").finalize();\n",
@@ -828,26 +709,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "f7880f35-9e11-40aa-ab23-511c684d17d2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f610612f61f441a845043ac32bc017b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter widget with unique id: 3f610612f61f441a845043ac32bc017b"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ScatterPlot(\"Admission_Predict.csv\", \"University Rating\", \"CGPA\", \"\", \"\", \"\", \"\", \"\", \"\", \"University Rating vs CGPA\");\n",
     "auto img = xw::image_from_file(\"./plots/University Rating vs CGPA.png\").finalize();\n",
@@ -894,7 +759,7 @@
     "// Split the dataset into train and test sets using mlpack.\n",
     "arma::mat Xtrain, Xtest;\n",
     "arma::Row<size_t> Ytrain, Ytest;\n",
-    "mlpack::data::Split(gradData, targets, Xtrain, Xtest, Ytrain, Ytest, 0.25);"
+    "Split(gradData, targets, Xtrain, Xtest, Ytrain, Ytest, 0.25);"
    ]
   },
   {
