--- a/lstm_stock_prediction/lstm_multivariate_time_series_prediction.ipynb
+++ b/lstm_stock_prediction/lstm_multivariate_time_series_prediction.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "### 1. Setup\n",
-    "Include all libraries required to implement this tutorial. These mainly include files from mlpack, ensmallen and armadillo."
+    "First, download the data, and then include all libraries required to implement this tutorial. These mainly include files from mlpack, ensmallen and armadillo."
    ]
   },
   {
@@ -23,13 +23,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#include <mlpack/core.hpp>\n",
-    "#include <mlpack/methods/ann/rnn.hpp>\n",
-    "#include <mlpack/methods/ann/layer/layer.hpp>\n",
-    "#include <mlpack/core/data/scaler_methods/min_max_scaler.hpp>\n",
-    "#include <mlpack/methods/ann/init_rules/he_init.hpp>\n",
-    "#include <mlpack/methods/ann/loss_functions/mean_squared_error.hpp>\n",
-    "#include <ensmallen.hpp>"
+    "!wget -q https://datasets.mlpack.org/examples/Google2016-2019.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#include <mlpack/xeus-cling.hpp>\n",
+    "#include <mlpack.hpp>"
    ]
   },
   {
@@ -41,20 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using namespace mlpack;"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "using namespace mlpack::ann;"
+    "using namespace mlpack;"
    ]
   },
   {
@@ -94,7 +89,7 @@
     "const double RATIO = 0.1;\n",
     "\n",
     "// Step size of an optimizer.\n",
-    "const double STEP_SIZE = 5e-4;\n",
+    "const double STEP_SIZE = 1e-4;\n",
     "\n",
     "// Number of cells in the LSTM (hidden layers in standard terms).\n",
     "// NOTE: you may play with this variable in order to further optimize the\n",
@@ -108,18 +103,16 @@
     "// Nunmber of timesteps to look backward for in the RNN.\n",
     "const int rho = 16;\n",
     "\n",
-    "// Max Rho for LSTM.\n",
-    "const int maxRho = rho;\n",
-    "\n",
     "// Number of epochs for training. Increase the epochs for better results.\n",
-    "const int EPOCHS = 15;"
+    "// Note that in the notebook we only run for one epoch, so that it does not take too long!\n",
+    "const int EPOCHS = 1;"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set paths for the dataset, trained model and final predictions."
+    "Set path for the dataset."
    ]
   },
   {
@@ -131,9 +124,7 @@
     "// Change the names of these files as necessary. They should be correct\n",
     "// already, if your program's working directory contains the data and/or\n",
     "// model.\n",
-    "const std::string dataFile = \"Google2016-2019.csv\";\n",
-    "// Path where the model will be saved.\n",
-    "const std::string modelFile = \"lstm_multi.bin\";"
+    "const std::string dataFile = \"Google2016-2019.csv\";"
    ]
   },
   {
@@ -153,10 +144,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            0            0            0            0            0\n",
       "   6.6826e+02   2.6320e+06   6.7100e+02   6.7230e+02   6.6328e+02\n",
       "   6.8004e+02   2.1697e+06   6.7897e+02   6.8033e+02   6.7300e+02\n",
-      "   6.8411e+02   1.9314e+06   6.8300e+02   6.8743e+02   6.8141e+02\n"
+      "   6.8411e+02   1.9314e+06   6.8300e+02   6.8743e+02   6.8141e+02\n",
+      "   6.9210e+02   1.5973e+06   6.8547e+02   6.9232e+02   6.8365e+02\n"
      ]
     }
    ],
@@ -283,18 +274,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mlpack::ann::RNN<mlpack::ann::MeanSquaredError<>, mlpack::ann::HeInitialization> model(rho);\n",
+    "RNN<MeanSquaredError, HeInitialization> model(rho);\n",
     "// Create the model architecture.\n",
-    "model.Add<mlpack::ann::IdentityLayer<> >();\n",
-    "model.Add<mlpack::ann::LSTM<> >(inputSize, H1, maxRho);\n",
-    "model.Add<mlpack::ann::Dropout<> >(0.6);\n",
-    "model.Add<mlpack::ann::LeakyReLU<> >();\n",
-    "model.Add<mlpack::ann::LSTM<> >(H1, H1, maxRho);\n",
-    "model.Add<mlpack::ann::Dropout<> >(0.6);\n",
-    "model.Add<mlpack::ann::LeakyReLU<> >();\n",
-    "model.Add<mlpack::ann::LSTM<> >(H1, H1, maxRho);\n",
-    "model.Add<mlpack::ann::ReLULayer<> >();\n",
-    "model.Add<mlpack::ann::Linear<> >(H1, outputSize);"
+    "model.Add<LSTM>(H1);\n",
+    "model.Add<Dropout>(0.5);\n",
+    "model.Add<LeakyReLU>();\n",
+    "model.Add<LSTM>(H1);\n",
+    "model.Add<Dropout>(0.5);\n",
+    "model.Add<LeakyReLU>();\n",
+    "model.Add<LSTM>(H1);\n",
+    "model.Add<ReLU>();\n",
+    "model.Add<Linear>(outputSize);"
    ]
   },
   {
@@ -340,52 +330,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/244\n",
-      "0.502446\n",
-      "42/42 [==================================================] 100% - 0s 9ms/step - loss: 0.502446\n",
-      "Epoch 2/244\n",
-      "0.430152\n",
-      "42/42 [==================================================] 100% - 0s 10ms/step - loss: 0.430152\n",
-      "Epoch 3/244\n",
-      "0.207513\n",
-      "42/42 [==================================================] 100% - 0s 10ms/step - loss: 0.207513\n",
-      "Epoch 4/244\n",
-      "0.178334\n",
-      "42/42 [==================================================] 100% - 0s 10ms/step - loss: 0.178334\n",
-      "Epoch 5/244\n",
-      "0.162722\n",
-      "42/42 [==================================================] 100% - 0s 10ms/step - loss: 0.162722\n",
-      "Epoch 6/244\n",
-      "0.145162\n",
-      "42/42 [==================================================] 100% - 0s 10ms/step - loss: 0.145162\n",
-      "Epoch 7/244\n",
-      "0.127502\n",
-      "42/42 [==================================================] 100% - 0s 9ms/step - loss: 0.127502\n",
-      "Epoch 8/244\n",
-      "0.11174\n",
-      "42/42 [==================================================] 100% - 0s 10ms/step - loss: 0.11174\n",
-      "Epoch 9/244\n",
-      "0.0978461\n",
-      "42/42 [==================================================] 100% - 0s 10ms/step - loss: 0.0978461\n",
-      "Epoch 10/244\n",
-      "0.0868993\n",
-      "42/42 [==================================================] 100% - 0s 10ms/step - loss: 0.0868993\n",
-      "Epoch 11/244\n",
-      "0.0761016\n",
-      "42/42 [==================================================] 100% - 0s 10ms/step - loss: 0.0761016\n",
-      "Epoch 12/244\n",
-      "0.0704167\n",
-      "42/42 [==================================================] 100% - 0s 10ms/step - loss: 0.0704167\n",
-      "Epoch 13/244\n",
-      "0.0641131\n",
-      "42/42 [==================================================] 100% - 0s 10ms/step - loss: 0.0641131\n",
-      "Epoch 14/244\n",
-      "0.0592488\n",
-      "42/42 [==================================================] 100% - 0s 11ms/step - loss: 0.0592488\n",
-      "Epoch 15/244\n",
-      "0.0556059\n",
-      "42/42 [==================================================] 100% - 0s 10ms/step - loss: 0.0556059\n",
-      "Epoch 16/244\n"
+      "Epoch 1/2\n",
+      "inf42 [==================================================] 100% - ETA: 0s - loss: inf6418\n",
+      "42/42 [==================================================] 100% - 25s 2029ms/step - loss: inf\n"
      ]
     }
    ],
@@ -396,13 +343,9 @@
     "            optimizer,\n",
     "            // PrintLoss Callback prints loss for each epoch.\n",
     "            ens::PrintLoss(),\n",
-    "            // Progressbar Callback prints progress bar for each epoch.\n",
+    "            // ProgressBar Callback prints progress bar for each epoch.\n",
     "            // Here 40 signifies width of progress bar.\n",
-    "            ens::ProgressBar(40),\n",
-    "            // Stops the optimization process if the loss stops decreasing\n",
-    "            // or no improvement has been made. This will terminate the\n",
-    "            // optimization once we obtain a minima on training set.\n",
-    "            ens::EarlyStopAtMinLoss());"
+    "            ens::ProgressBar(40));"
    ]
   },
   {
@@ -426,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +377,7 @@
      "output_type": "stream",
      "text": [
       "The predicted Google stock (high, low) for the last day is: \n",
-      " (1108.29, 1029.65)\n"
+      " (628.529, 910.403)\n"
      ]
     }
    ],
@@ -471,32 +414,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Note that if you wanted to do this, you would need to add the line\n",
+    "// #define MLPACK_ENABLE_ANN_SERIALIZATION\n",
+    "// before including mlpack.hpp!\n",
+    "\n",
     "// Save the model.\n",
-    "mlpack::data::Save(modelFile, \"LSTMMulti\", model);\n",
+    "// data::Save(modelFile, \"LSTMMulti\", model);\n",
     "// Load the model.\n",
-    "RNN<mlpack::ann::MeanSquaredError<>, mlpack::ann::HeInitialization> trainedModel(rho);\n",
-    "mlpack::data::Load(modelFile, \"LSTMMulti\", trainedModel);"
+    "// RNN<MeanSquaredError, HeInitialization> trainedModel(rho);\n",
+    "// data::Load(modelFile, \"LSTMMulti\", trainedModel);"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "C++11",
-   "language": "C++11",
-   "name": "xcpp11"
+   "display_name": "C++14",
+   "language": "C++14",
+   "name": "xcpp14"
   },
   "language_info": {
    "codemirror_mode": "text/x-c++src",
    "file_extension": ".cpp",
    "mimetype": "text/x-c++src",
    "name": "c++",
-   "version": "11"
+   "version": "14"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
