--- a/microchip_quality_control_naive_bayes/microchip-quality-control-naive-bayes-cpp.ipynb
+++ b/microchip_quality_control_naive_bayes/microchip-quality-control-naive-bayes-cpp.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "371d41b4-0d7f-46ce-9d2b-4104b868f82e",
    "metadata": {},
    "outputs": [],
@@ -36,21 +36,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "396dd5f0-9218-4512-931e-a7553472612c",
    "metadata": {},
    "outputs": [],
    "source": [
     "// Import necessary library headers.\n",
     "#include <mlpack/xeus-cling.hpp>\n",
-    "#include <mlpack/core.hpp>\n",
-    "#include <mlpack/core/data/split_data.hpp>\n",
-    "#include <mlpack/methods/naive_bayes/naive_bayes_classifier.hpp>"
+    "#include <mlpack.hpp>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d97d146d-5d4d-4dfc-8f43-2d745a80ac50",
    "metadata": {},
    "outputs": [],
@@ -65,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f8b562ff-b276-46be-af69-726253e47ac8",
    "metadata": {},
    "outputs": [],
@@ -75,22 +73,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ce95ba5f-b9fb-490d-a635-c08dd722f649",
    "metadata": {},
    "outputs": [],
    "source": [
     "using namespace mlpack::data;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "88a0555a-3121-43ce-87d2-043ff2007deb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using namespace mlpack::naive_bayes;"
    ]
   },
   {
@@ -101,7 +89,7 @@
    "outputs": [],
    "source": [
     "// Utility functions for evaluation metrics.\n",
-    "double Accuracy(const arma::Row<size_t>& yPreds, const arma::Row<size_t>& yTrue)\n",
+    "double ComputeAccuracy(const arma::Row<size_t>& yPreds, const arma::Row<size_t>& yTrue)\n",
     "{\n",
     "    const size_t correct = arma::accu(yPreds == yTrue);\n",
     "    return (double)correct / (double)yTrue.n_elem;\n",
@@ -115,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "double Precision(const size_t truePos, const size_t falsePos)\n",
+    "double ComputePrecision(const size_t truePos, const size_t falsePos)\n",
     "{\n",
     "    return (double)truePos / (double)(truePos + falsePos);\n",
     "}"
@@ -128,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "double Recall(const size_t truePos, const size_t falseNeg)\n",
+    "double ComputeRecall(const size_t truePos, const size_t falseNeg)\n",
     "{\n",
     "    return (double)truePos / (double)(truePos + falseNeg);\n",
     "}"
@@ -141,10 +129,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "double F1Score(const size_t truePos, const size_t falsePos, const size_t falseNeg)\n",
+    "double ComputeF1Score(const size_t truePos, const size_t falsePos, const size_t falseNeg)\n",
     "{\n",
-    "    double prec = Precision(truePos, falsePos);\n",
-    "    double rec = Precision(truePos, falseNeg);\n",
+    "    double prec = ComputePrecision(truePos, falsePos);\n",
+    "    double rec = ComputeRecall(truePos, falseNeg);\n",
     "    return 2 * (prec * rec) / (prec + rec);\n",
     "}"
    ]
@@ -171,9 +159,9 @@
     "        size_t falseNeg = arma::accu(yPreds != val && yPreds != yTrue);\n",
     "        \n",
     "        std::cout << std::setw(15) << val\n",
-    "                  << std::setw(12) << std::setprecision(2) << Precision(truePos, falsePos) \n",
-    "                  << std::setw(16) << std::setprecision(2) << Recall(truePos, falseNeg) \n",
-    "                  << std::setw(14) << std::setprecision(2) << F1Score(truePos, falsePos, falseNeg)\n",
+    "                  << std::setw(12) << std::setprecision(2) << ComputePrecision(truePos, falsePos) \n",
+    "                  << std::setw(16) << std::setprecision(2) << ComputeRecall(truePos, falseNeg) \n",
+    "                  << std::setw(14) << std::setprecision(2) << ComputeF1Score(truePos, falsePos, falseNeg)\n",
     "                  << std::setw(16) << truePos\n",
     "                  << std::endl;\n",
     "    }\n",
@@ -240,12 +228,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5805baabceaf495cb75a58ee15a42ff4",
+       "model_id": "0f5aa395ad804810b5d8d6ff8bc9d43b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 5805baabceaf495cb75a58ee15a42ff4"
+       "A Jupyter widget with unique id: 0f5aa395ad804810b5d8d6ff8bc9d43b"
       ]
      },
      "execution_count": 14,
@@ -285,12 +273,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c39fe7cc0444a02a02fc5a1c43fa72d",
+       "model_id": "129e64f5427146cfbf2847b890dd9f42",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 2c39fe7cc0444a02a02fc5a1c43fa72d"
+       "A Jupyter widget with unique id: 129e64f5427146cfbf2847b890dd9f42"
       ]
      },
      "execution_count": 15,
@@ -313,12 +301,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70a0027ff76945a8bf56b1cd03765d1b",
+       "model_id": "93b104e0d283477c94788aabb135a999",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 70a0027ff76945a8bf56b1cd03765d1b"
+       "A Jupyter widget with unique id: 93b104e0d283477c94788aabb135a999"
       ]
      },
      "execution_count": 16,
@@ -465,17 +453,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9200\n",
+      "Accuracy: 1.0000\n",
       "                    precision         recall       f1-score        support\n",
       "\n",
-      "              0        1.00            0.82          0.90               9\n",
-      "              1        0.88            1.00          0.93              14\n"
+      "              0        1.00            1.00          1.00              12\n",
+      "              1        1.00            1.00          1.00              13\n"
      ]
     }
    ],
    "source": [
     "// Classification report.\n",
-    "std::cout << \"Accuracy: \" << Accuracy(output, Ytest) << std::endl;\n",
+    "std::cout << \"Accuracy: \" << ComputeAccuracy(output, Ytest) << std::endl;\n",
     "ClassificationReport(output, Ytest);"
    ]
   },
@@ -488,12 +476,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ac4fbc468684d5091ba60bb16ed1c23",
+       "model_id": "2932e9a86bd546c382ed63a243924c50",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 1ac4fbc468684d5091ba60bb16ed1c23"
+       "A Jupyter widget with unique id: 2932e9a86bd546c382ed63a243924c50"
       ]
      },
      "execution_count": 23,
