--- a/neural_network_regression/neural_network_regression.ipynb
+++ b/neural_network_regression/neural_network_regression.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "source": [
     "### 1. Setup\n",
-    "Include all libraries required to implement this tutorial. These mainly include files from mlpack, ensmallen and armadillo."
+    "Download the data and then include all libraries required to implement this tutorial."
    ]
   },
   {
@@ -22,14 +22,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#include <mlpack/core.hpp>\n",
-    "#include <mlpack/methods/ann/loss_functions/mean_squared_error.hpp>\n",
-    "#include <mlpack/core/data/scaler_methods/min_max_scaler.hpp>\n",
-    "#include <mlpack/methods/ann/layer/layer.hpp>\n",
-    "#include <mlpack/core/data/split_data.hpp>\n",
-    "#include <mlpack/methods/ann/ffn.hpp>\n",
-    "#include <mlpack/methods/ann/init_rules/he_init.hpp>\n",
-    "#include <ensmallen.hpp>"
+    "!wget -q https://datasets.mlpack.org/examples/bodyfat.tsv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#include <mlpack/xeus-cling.hpp>\n",
+    "#include <mlpack.hpp>"
    ]
   },
   {
@@ -41,20 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using namespace mlpack;"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "using namespace mlpack::ann;"
+    "using namespace mlpack;"
    ]
   },
   {
@@ -234,21 +228,21 @@
     "// data and the next LeakyReLU layer.\n",
     "// Parameters specify the number of input features and number of\n",
     "// neurons in the next layer.\n",
-    "FFN<MeanSquaredError<>, HeInitialization> model;\n",
-    "model.Add<Linear<>>(trainX.n_rows, H1);\n",
+    "FFN<MeanSquaredError, HeInitialization> model;\n",
+    "model.Add<Linear>(H1);\n",
     "// Activation layer:\n",
-    "model.Add<LeakyReLU<>>();\n",
+    "model.Add<LeakyReLU>();\n",
     "// Connection layer between two activation layers.\n",
-    "model.Add<Linear<>>(H1, H2);\n",
+    "model.Add<Linear>(H2);\n",
     "// Activation layer.\n",
-    "model.Add<LeakyReLU<>>();\n",
+    "model.Add<LeakyReLU>();\n",
     "// Connection layer.\n",
-    "model.Add<Linear<>>(H2, H3);\n",
+    "model.Add<Linear>(H3);\n",
     "// Activation layer.\n",
-    "model.Add<LeakyReLU<>>();\n",
+    "model.Add<LeakyReLU>();\n",
     "// Connection layer => output.\n",
     "// The output of one neuron is the regression output for one record.\n",
-    "model.Add<Linear<>>(H3, 1);"
+    "model.Add<Linear>(1);"
    ]
   },
   {
@@ -292,96 +286,96 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/852\n",
-      "0.179052\n",
-      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.179052\n",
-      "Epoch 2/852\n",
-      "0.00513052\n",
-      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.00513052\n",
-      "Epoch 3/852\n",
-      "0.00688234\n",
-      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.00688234\n",
-      "Epoch 4/852\n",
-      "0.00184822\n",
-      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.00184822\n",
-      "Epoch 5/852\n",
-      "0.00105378\n",
-      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.00105378\n",
-      "Epoch 6/852\n",
-      "0.000750528\n",
-      "8/8 [==================================================] 100% - 0s 7ms/step - loss: 0.000750528\n",
-      "Epoch 7/852\n",
-      "0.000693577\n",
-      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000693577\n",
-      "Epoch 8/852\n",
-      "0.000746652\n",
-      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000746652\n",
-      "Epoch 9/852\n",
-      "0.00066746\n",
-      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.00066746\n",
-      "Epoch 10/852\n",
-      "0.000884704\n",
-      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000884704\n",
-      "Epoch 11/852\n",
-      "0.000699084\n",
-      "8/8 [==================================================] 100% - 0s 7ms/step - loss: 0.000699084\n",
-      "Epoch 12/852\n",
-      "0.000637509\n",
-      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000637509\n",
-      "Epoch 13/852\n",
-      "0.00060156\n",
-      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.00060156\n",
-      "Epoch 14/852\n",
-      "0.000661983\n",
-      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000661983\n",
-      "Epoch 15/852\n",
-      "0.000570786\n",
-      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000570786\n",
-      "Epoch 16/852\n",
-      "0.000579697\n",
-      "8/8 [==================================================] 100% - 0s 8ms/step - loss: 0.000579697\n",
-      "Epoch 17/852\n",
-      "0.000596221\n",
-      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000596221\n",
-      "Epoch 18/852\n",
-      "0.000496033\n",
-      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000496033\n",
-      "Epoch 19/852\n",
-      "0.000527568\n",
-      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000527568\n",
-      "Epoch 20/852\n",
-      "0.000487463\n",
-      "8/8 [==================================================] 100% - 0s 7ms/step - loss: 0.000487463\n",
-      "Epoch 21/852\n",
-      "0.000618489\n",
-      "8/8 [==================================================] 100% - 0s 2ms/step - loss: 0.000618489\n",
-      "Epoch 22/852\n",
-      "0.00055465\n",
-      "8/8 [==================================================] 100% - 0s 2ms/step - loss: 0.00055465\n",
-      "Epoch 23/852\n",
-      "0.000483989\n",
-      "8/8 [==================================================] 100% - 0s 8ms/step - loss: 0.000483989\n",
-      "Epoch 24/852\n",
-      "0.000473512\n",
-      "8/8 [==================================================] 100% - 0s 2ms/step - loss: 0.000473512\n",
-      "Epoch 25/852\n",
-      "0.000593794\n",
-      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000593794\n",
-      "Epoch 26/852\n",
-      "0.000458153\n",
-      "8/8 [==================================================] 100% - 0s 8ms/step - loss: 0.000458153\n",
-      "Epoch 27/852\n",
-      "0.000379911\n",
-      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000379911\n",
-      "Epoch 28/852\n",
-      "0.000441901\n",
-      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000441901\n",
-      "Epoch 29/852\n",
-      "0.000400578\n",
-      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000400578\n",
-      "Epoch 30/852\n",
-      "0.000323442\n",
-      "8/8 [==================================================] 100% - 0s 7ms/step - loss: 0.000323442\n"
+      "Epoch 1/30\n",
+      "6.39817================================================] 100% - ETA: 0s - loss: 5.04301\n",
+      "8/8 [==================================================] 100% - 0s 100ms/step - loss: 6.39817\n",
+      "Epoch 2/30\n",
+      "0.217428===============================================] 100% - ETA: 0s - loss: 0.171375\n",
+      "8/8 [==================================================] 100% - 1s 138ms/step - loss: 0.217428\n",
+      "Epoch 3/30\n",
+      "0.0428331==============================================] 100% - ETA: 0s - loss: 0.0337608\n",
+      "8/8 [==================================================] 100% - 1s 136ms/step - loss: 0.0428331\n",
+      "Epoch 4/30\n",
+      "0.0630035==============================================] 100% - ETA: 0s - loss: 0.049659\n",
+      "8/8 [==================================================] 100% - 1s 149ms/step - loss: 0.0630035\n",
+      "Epoch 5/30\n",
+      "0.0357849==============================================] 100% - ETA: 0s - loss: 0.0282055\n",
+      "8/8 [==================================================] 100% - 0s 124ms/step - loss: 0.0357849\n",
+      "Epoch 6/30\n",
+      "0.0323803==============================================] 100% - ETA: 0s - loss: 0.0255227\n",
+      "8/8 [==================================================] 100% - 0s 91ms/step - loss: 0.0323803\n",
+      "Epoch 7/30\n",
+      "0.0185968==============================================] 100% - ETA: 0s - loss: 0.0146579\n",
+      "8/8 [==================================================] 100% - 1s 172ms/step - loss: 0.0185968\n",
+      "Epoch 8/30\n",
+      "0.00844833=============================================] 100% - ETA: 0s - loss: 0.00665893\n",
+      "8/8 [==================================================] 100% - 1s 136ms/step - loss: 0.00844833\n",
+      "Epoch 9/30\n",
+      "0.00720462=============================================] 100% - ETA: 0s - loss: 0.00567864\n",
+      "8/8 [==================================================] 100% - 0s 124ms/step - loss: 0.00720462\n",
+      "Epoch 10/30\n",
+      "0.00307568=============================================] 100% - ETA: 0s - loss: 0.00242424\n",
+      "8/8 [==================================================] 100% - 1s 125ms/step - loss: 0.00307568\n",
+      "Epoch 11/30\n",
+      "0.00433392=============================================] 100% - ETA: 0s - loss: 0.00341597\n",
+      "8/8 [==================================================] 100% - 1s 137ms/step - loss: 0.00433392\n",
+      "Epoch 12/30\n",
+      "0.00375061=============================================] 100% - ETA: 0s - loss: 0.00295621\n",
+      "8/8 [==================================================] 100% - 0s 122ms/step - loss: 0.00375061\n",
+      "Epoch 13/30\n",
+      "0.00325354=============================================] 100% - ETA: 0s - loss: 0.00256442\n",
+      "8/8 [==================================================] 100% - 1s 139ms/step - loss: 0.00325354\n",
+      "Epoch 14/30\n",
+      "0.00245697=============================================] 100% - ETA: 0s - loss: 0.00193657\n",
+      "8/8 [==================================================] 100% - 1s 161ms/step - loss: 0.00245697\n",
+      "Epoch 15/30\n",
+      "0.00329592=============================================] 100% - ETA: 0s - loss: 0.00259783\n",
+      "8/8 [==================================================] 100% - 0s 121ms/step - loss: 0.00329592\n",
+      "Epoch 16/30\n",
+      "0.00258704=============================================] 100% - ETA: 0s - loss: 0.00203909\n",
+      "8/8 [==================================================] 100% - 0s 102ms/step - loss: 0.00258704\n",
+      "Epoch 17/30\n",
+      "0.00223615=============================================] 100% - ETA: 0s - loss: 0.00176252\n",
+      "8/8 [==================================================] 100% - 1s 127ms/step - loss: 0.00223615\n",
+      "Epoch 18/30\n",
+      "0.00301521=============================================] 100% - ETA: 0s - loss: 0.00237657\n",
+      "8/8 [==================================================] 100% - 1s 133ms/step - loss: 0.00301521\n",
+      "Epoch 19/30\n",
+      "0.00273706=============================================] 100% - ETA: 0s - loss: 0.00215734\n",
+      "8/8 [==================================================] 100% - 1s 135ms/step - loss: 0.00273706\n",
+      "Epoch 20/30\n",
+      "0.00190376=============================================] 100% - ETA: 0s - loss: 0.00150054\n",
+      "8/8 [==================================================] 100% - 0s 114ms/step - loss: 0.00190376\n",
+      "Epoch 21/30\n",
+      "0.00139603=============================================] 100% - ETA: 0s - loss: 0.00110034\n",
+      "8/8 [==================================================] 100% - 0s 122ms/step - loss: 0.00139603\n",
+      "Epoch 22/30\n",
+      "0.0011556==============================================] 100% - ETA: 0s - loss: 0.000910836\n",
+      "8/8 [==================================================] 100% - 0s 113ms/step - loss: 0.0011556\n",
+      "Epoch 23/30\n",
+      "0.00123391=============================================] 100% - ETA: 0s - loss: 0.000972557\n",
+      "8/8 [==================================================] 100% - 1s 162ms/step - loss: 0.00123391\n",
+      "Epoch 24/30\n",
+      "0.000834006============================================] 100% - ETA: 0s - loss: 0.000657359\n",
+      "8/8 [==================================================] 100% - 0s 124ms/step - loss: 0.000834006\n",
+      "Epoch 25/30\n",
+      "0.000854412============================================] 100% - ETA: 0s - loss: 0.000673443\n",
+      "8/8 [==================================================] 100% - 1s 137ms/step - loss: 0.000854412\n",
+      "Epoch 26/30\n",
+      "0.00147165=============================================] 100% - ETA: 0s - loss: 0.00115995\n",
+      "8/8 [==================================================] 100% - 1s 137ms/step - loss: 0.00147165\n",
+      "Epoch 27/30\n",
+      "0.00190981=============================================] 100% - ETA: 0s - loss: 0.00150533\n",
+      "8/8 [==================================================] 100% - 1s 137ms/step - loss: 0.00190981\n",
+      "Epoch 28/30\n",
+      "0.000890155============================================] 100% - ETA: 0s - loss: 0.000701615\n",
+      "8/8 [==================================================] 100% - 0s 113ms/step - loss: 0.000890155\n",
+      "Epoch 29/30\n",
+      "0.00162984=============================================] 100% - ETA: 0s - loss: 0.00128463\n",
+      "8/8 [==================================================] 100% - 1s 126ms/step - loss: 0.00162984\n",
+      "Epoch 30/30\n",
+      "0.00148643=============================================] 100% - ETA: 0s - loss: 0.00117159\n",
+      "8/8 [==================================================] 100% - 0s 123ms/step - loss: 0.00148643\n"
      ]
     }
    ],
@@ -418,7 +412,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error on Prediction data points: 0.0087528\n"
+      "Mean Squared Error on Prediction data points: 0.00013648\n"
      ]
     }
    ],
@@ -446,31 +440,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data::Save(modelFile, \"NNRegressor\", model);\n",
-    "FFN<MeanSquaredError<>, HeInitialization> modelP;\n",
+    "// For the sake of simplicity and computational resources, we don't serialize in the notebook.\n",
+    "// But, if you want to serialize neural networks, be sure to add the line\n",
+    "// #define MLPACK_ENABLE_ANN_SERIALIZATION\n",
+    "// before including mlpack.hpp!\n",
+    "\n",
+    "// data::Save(modelFile, \"NNRegressor\", model);\n",
+    "// FFN<MeanSquaredError, HeInitialization> modelP;\n",
     "// Load weights into the model.\n",
-    "data::Load(modelFile, \"NNRegressor\", modelP);"
+    "// data::Load(modelFile, \"NNRegressor\", modelP);"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "C++11",
-   "language": "C++11",
-   "name": "xcpp11"
+   "display_name": "C++14",
+   "language": "C++14",
+   "name": "xcpp14"
   },
   "language_info": {
    "codemirror_mode": "text/x-c++src",
    "file_extension": ".cpp",
    "mimetype": "text/x-c++src",
    "name": "c++",
-   "version": "11"
+   "version": "14"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
