--- a/portfolio_optimization/portfolio-optimization-cpp.ipynb
+++ b/portfolio_optimization/portfolio-optimization-cpp.ipynb
@@ -2,7 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "ee55e278",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,12 +24,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "f4cdb0ad",
    "metadata": {},
    "outputs": [],
    "source": [
     "#include <mlpack/xeus-cling.hpp>\n",
-    "\n",
     "#include <ensmallen.hpp>\n",
     "#include \"../utils/portfolio.hpp\"\n",
     "#include \"../utils/front.hpp\"\n",
@@ -37,7 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "b7b39347",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "9da0d4ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +63,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "3bd223ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,6 +73,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a2f834bf",
    "metadata": {},
    "source": [
     "Download backup data"
@@ -76,15 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "d5daec34",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget http://lab.mlpack.org/data/portfolio.csv"
+    "!wget -q http://datasets.mlpack.org/portfolio.csv"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "0d94d16f",
    "metadata": {},
    "source": [
     "### 1. Set the Model Parameters"
@@ -92,6 +99,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c525e260",
    "metadata": {},
    "source": [
     "In this section, we will select the parameters for the optimizer. Parameters include name of the stocks, starting date, ending date and Finance API Source."
@@ -99,7 +107,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "id": "fcd025a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +118,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "25a7460e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,6 +132,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a7a89be0",
    "metadata": {},
    "source": [
     "We're setting the data source to Yahoo Finance API by default. For custom data-source, refer pandas-datareader documentation to get the exhaustive list of available API sources."
@@ -129,7 +140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "id": "0527863d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +153,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "id": "4b98018d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,6 +167,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0451a0f2",
    "metadata": {},
    "source": [
     "Get the current date."
@@ -161,7 +175,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "id": "401fa1d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +189,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "id": "4131f43c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +201,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "id": "e3fc6b37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +218,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "id": "3987cd52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,6 +230,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8f5c9944",
    "metadata": {},
    "source": [
     "### 2. Loading the Dataset"
@@ -219,6 +238,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f185c8ef",
    "metadata": {},
    "source": [
     "In this section, we will create a helper class which will generate the CSV file for us based on the parameters provided in previous section. This class would also define the objective functions in question, namely: Return and Volatility. Ideally, we would want to maximize the returns and reduce the volatility. Since our implementation of algorithm works on minimization of all objectives, we have appended negative sign to the returns objective which converts it into a minimization problem."
@@ -226,7 +246,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "id": "efcc8cda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,6 +349,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8f9b4ff1",
    "metadata": {},
    "source": [
     "### 3. Optimization "
@@ -335,6 +357,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1a2052bb",
    "metadata": {},
    "source": [
     "There are plethora of algorithms to solve this family of problems often known as Multi Objective Problem (MOP). Multi Objective Evolutionary Algorithms (MOEA) are a set of algorithms which employs the concept of evolution to optimize these kind of problems. Notably, two algorithms are often used for this task:\n",
@@ -346,6 +369,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b3d2d190",
    "metadata": {},
    "source": [
     "#### a) NSGA-II\n",
@@ -355,6 +379,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c6599715",
    "metadata": {},
    "source": [
     "#### b) MOEA/D - DE\n",
@@ -366,6 +391,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "601247f8",
    "metadata": {},
    "source": [
     "We would like to track the optimization process over the generations. For that let's create a container to store the current Pareto Front."
@@ -373,7 +399,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "id": "16b490b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,6 +410,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "067be623",
    "metadata": {},
    "source": [
     "This data structure would then be passed on to the \"QueryFront\" Callback which will track the evolution for us."
@@ -390,6 +418,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e4ae94b9",
    "metadata": {},
    "source": [
     "Begin Optimization! (This will take a fair amount of time)."
@@ -397,7 +426,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "id": "06c34472",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +436,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "id": "52ee9459",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,6 +446,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fd6c00b8",
    "metadata": {},
    "source": [
     "Let's create an array to store the X and Y coordinates of all the Pareto Fronts."
@@ -422,7 +454,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
+   "id": "c6ff663e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,6 +464,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "48d3dd5f",
    "metadata": {},
    "source": [
     "Convert to neccessary data structure."
@@ -438,7 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "id": "6666fb1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +513,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "id": "69ddfec3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,6 +524,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1270270e",
    "metadata": {},
    "source": [
     "### 4.  Plotting"
@@ -495,6 +532,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c584f724",
    "metadata": {},
    "source": [
     "As said before, we desire higher returns and lower volatility. The Pareto Front generated gives an optimal set of solutions such that, higher volatility is traded-off with higher returns and vice-versa. Hence, all the solutions are \"optimal\". Based on user's preference, he/she can choose their solution from the generated front.\n",
@@ -510,9 +548,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
+   "id": "a8faa4ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bbb8f72866d14b2b8dbacaaab4c86473",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter widget with unique id: bbb8f72866d14b2b8dbacaaab4c86473"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "//! A util to plot the evolution process gif.\n",
     "Front(nsga2FrontsX.str(), nsga2FrontsY.str(), moeadFrontsX.str(), moeadFrontsY.str());\n",
@@ -523,6 +578,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a57c55f4",
    "metadata": {},
    "source": [
     "### 5. Final Thoughts"
@@ -530,6 +586,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "051dee57",
    "metadata": {},
    "source": [
     "In this notebook, we've seen how a MultiObjective Optimization algorithm can help in investing in stocks. We specified our stocks and witnessed our algorithm optimize the returns vs volatility trade-off in action. From the evolution process depicted above, it can be deduced that:\n",
