--- a/salary_prediction_with_linear_regression/salary-prediction-linear-regression-cpp.ipynb
+++ b/salary_prediction_with_linear_regression/salary-prediction-linear-regression-cpp.ipynb
@@ -37,10 +37,7 @@
    "source": [
     "// Import necessary library header.\n",
     "#include <mlpack/xeus-cling.hpp>\n",
-    "\n",
-    "#include <mlpack/core.hpp>\n",
-    "#include <mlpack/core/data/split_data.hpp>\n",
-    "#include <mlpack/methods/linear_regression/linear_regression.hpp>\n",
+    "#include <mlpack.hpp>\n",
     "#include <cmath>"
    ]
   },
@@ -65,8 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using namespace mlpack;\n",
-    "using namespace mlpack::regression;"
+    "using namespace mlpack;"
    ]
   },
   {
@@ -105,12 +101,12 @@
      "output_type": "stream",
      "text": [
       "Years Of Experience    Salary\n",
-      "   1.1000e+00   3.9343e+04\n",
       "   1.3000e+00   4.6205e+04\n",
       "   1.5000e+00   3.7731e+04\n",
       "   2.0000e+00   4.3525e+04\n",
       "   2.2000e+00   3.9891e+04\n",
       "   2.9000e+00   5.6642e+04\n",
+      "   3.0000e+00   6.0150e+04\n",
       "\n"
      ]
     }
@@ -131,12 +127,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "912d932e54c14571a0ac726764dac35f",
+       "model_id": "99a3c4f054234021beac4f92bb685796",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 912d932e54c14571a0ac726764dac35f"
+       "A Jupyter widget with unique id: 99a3c4f054234021beac4f92bb685796"
       ]
      },
      "execution_count": 8,
@@ -252,7 +248,7 @@
    "source": [
     "// Create and Train Linear Regression model.\n",
     "\n",
-    "regression::LinearRegression lr(Xtrain, yTrain, 0.5);"
+    "LinearRegression lr(Xtrain, yTrain, 0.5);"
    ]
   },
   {
@@ -291,12 +287,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "88f7de7663bd431382ce760f7f8a08a0",
+       "model_id": "852629695add41ee8b08214c5baeb3a7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 88f7de7663bd431382ce760f7f8a08a0"
+       "A Jupyter widget with unique id: 852629695add41ee8b08214c5baeb3a7"
       ]
      },
      "execution_count": 16,
@@ -346,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 17,
    "id": "british-moment",
    "metadata": {},
    "outputs": [
@@ -354,9 +350,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Absolute Error: 5753.06\n",
-      "Mean Squared Error: 3.9482e+07\n",
-      "Root Mean Squared Error: 6283.47\n"
+      "Mean Absolute Error: 5475.83\n",
+      "Mean Squared Error: 3.61527e+07\n",
+      "Root Mean Squared Error: 6012.71\n"
      ]
     }
    ],
