--- a/student_admission_regression_with_logistic_regression/student-admission-logistic-regression-cpp.ipynb
+++ b/student_admission_regression_with_logistic_regression/student-admission-logistic-regression-cpp.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget -q https://lab.mlpack.org/data/student-admission.txt"
+    "!wget -q https://datasets.mlpack.org/student-admission.txt"
    ]
   },
   {
@@ -43,9 +43,7 @@
    "outputs": [],
    "source": [
     "#include <mlpack/xeus-cling.hpp>\n",
-    "\n",
-    "#include <mlpack/core.hpp>\n",
-    "#include <mlpack/methods/logistic_regression/logistic_regression.hpp>"
+    "#include <mlpack.hpp>"
    ]
   },
   {
@@ -77,15 +75,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using namespace mlpack::regression;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "// Read the input data.\n",
     "arma::mat input;\n",
     "data::Load(\"student-admission.txt\", input);"
@@ -93,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -129,21 +118,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54466081d1d04875824c960df742de13",
+       "model_id": "2b8aa7e1b739435991b2bab9ab88bc51",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 54466081d1d04875824c960df742de13"
+       "A Jupyter widget with unique id: 2b8aa7e1b739435991b2bab9ab88bc51"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,21 +262,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e023c9b879234163b1f5498cc8154920",
+       "model_id": "48f38545870a4c9a9410782ccf31435c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: e023c9b879234163b1f5498cc8154920"
+       "A Jupyter widget with unique id: 48f38545870a4c9a9410782ccf31435c"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
